<?xml version="1.0" encoding="UTF-8"?>

<!--
  Maven project configuration file
  http://maven.apache.org/

  For building this project: mvn package
-->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.kortforsyningen</groupId>
  <artifactId>proj</artifactId>
  <version>1.0-SNAPSHOT</version>
  <name>PROJ bindings</name>
  <url>https://github.com/Kortforsyningen/PROJ-JNI</url>
  <description>
    Java Native Interface for the PROJ C/C++ library.
    PROJ is a generic coordinate transformation software that transforms
    geospatial coordinates from one coordinate reference system (CRS) to another.
    This includes cartographic projections as well as geodetic transformations.
    This package exposes PROJ services as implementations of GeoAPI interfaces.
    Both PROJ and GeoAPI are modeled according the ISO 19111 international standard.
  </description>

  <organization>
    <name>Agency for Data Supply and Efficiency</name>
    <url>https://www.kortforsyningen.dk/</url>
  </organization>

  <licenses>
    <license>
      <name>MIT</name>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <scm>
    <connection>scm:git:https://github.com/Kortforsyningen/PROJ-JNI</connection>
    <url>https://github.com/Kortforsyningen/PROJ-JNI</url>
  </scm>

  <developers>
    <developer>
      <id>kbevers</id>
      <name>Kristian Evers</name>
      <email>kristianevers@gmail.com</email>
      <organization>Kortforsyningen</organization>
      <organizationUrl>https://www.kortforsyningen.dk</organizationUrl>
      <roles>
        <role>C/C++ developer</role>
      </roles>
      <timezone>+1</timezone>
    </developer>
    <developer>
      <id>desruisseaux</id>
      <name>Martin Desruisseaux</name>
      <email>martin.desruisseaux@geomatys.com</email>
      <organization>Geomatys</organization>
      <organizationUrl>http://www.geomatys.com</organizationUrl>
      <roles>
        <role>Java developer</role>
      </roles>
      <timezone>+1</timezone>
    </developer>
  </developers>

  <dependencies>
    <dependency>
      <groupId>org.opengis</groupId>
      <artifactId>geoapi</artifactId>
      <version>3.0.1</version>
    </dependency>
    <dependency>
      <groupId>org.opengis</groupId>
      <artifactId>geoapi-conformance</artifactId>
      <version>3.0.1</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <build>
    <plugins>

      <!-- Compilation: target Java 11, enable all warnings. -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <release>8</release>
          <showWarnings>true</showWarnings>
          <showDeprecation>true</showDeprecation>
          <useIncrementalCompilation>false</useIncrementalCompilation>
          <compilerArgs>
            <arg>--doclint-format</arg> <arg>html5</arg>
            <arg>-h</arg> <arg>${project.build.sourceDirectory}/../cpp</arg>
          </compilerArgs>
        </configuration>
      </plugin>

      <!-- Test execution. -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.0.0-M3</version>
        <configuration>
          <systemPropertyVariables>
            <java.util.logging.config.file>${project.basedir}/src/config/logging.properties</java.util.logging.config.file>
          </systemPropertyVariables>
          <argLine>-Xcheck:jni</argLine>
          <trimStackTrace>false</trimStackTrace>
        </configuration>
      </plugin>

      <!-- JAR packaging: add project name and version in MANIFEST.MF file. -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.1.2</version>
        <configuration>
          <archive>
            <addMavenDescriptor>false</addMavenDescriptor>
            <manifest>
              <addClasspath>true</addClasspath>
              <classpathLayoutType>simple</classpathLayoutType>
              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
            </manifest>
            <manifestEntries>
              <Automatic-Module-Name>
                org.kortforsyningen.proj
              </Automatic-Module-Name>
            </manifestEntries>
          </archive>
        </configuration>
      </plugin>

      <!--
        Compile C/C++ code using CMake. Configuration will be written in `target/cmake` and will not
        be redone, unless that directory is deleted. The compiled native file will be written in the
       `classes/org/…/proj/` directory for inclusion in the JAR file and will not be rebuilt, unless
        that file is deleted. Symbolik links to binaries will be created in the `target` directory.
      -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-antrun-plugin</artifactId>
        <version>1.8</version>
        <executions>
          <execution>
            <id>build-native</id>
            <phase>process-classes</phase>
            <goals><goal>run</goal></goals>
            <configuration>
              <target>
                <property name="source.directory" value="${project.basedir}/src/main/cpp"/>
                <property name="target.directory" value="${project.build.directory}"/>
                <property name=    "cmake.subdir" value="cmake"/>
                <ant dir="${target.directory}" antfile="${project.basedir}/src/main/cpp/build.xml" inheritAll="true"/>
              </target>
            </configuration>
          </execution>
          <execution>
            <id>package</id>
            <phase>package</phase>
            <goals><goal>run</goal></goals>
            <configuration>
              <target>
                <!-- Add links to dependencies for convenience. -->
                <symlink overwrite="true" link="${project.build.directory}" resource="${maven.dependency.javax.measure.unit-api.jar.path}"/>
                <symlink overwrite="true" link="${project.build.directory}" resource="${maven.dependency.org.opengis.geoapi.jar.path}"/>
              </target>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <!-- JavaDoc configuration. -->
      <plugin>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.1.1</version>
        <configuration>
          <excludePackageNames>org.kortforsyningen.proj.spi</excludePackageNames>
          <encoding>${project.build.sourceEncoding}</encoding>
          <docencoding>${project.build.sourceEncoding}</docencoding>
          <charset>${project.build.sourceEncoding}</charset>
          <author>false</author>
          <version>false</version>
          <noqualifier>all</noqualifier>
          <quiet>true</quiet>
          <keywords>true</keywords>
          <breakiterator>true</breakiterator>
          <validateLinks>true</validateLinks>
          <detectJavaApiLink>false</detectJavaApiLink>
          <links>
            <link>https://docs.oracle.com/en/java/javase/13/docs/api</link>
            <link>http://www.geoapi.org/3.0/javadoc</link>
          </links>
          <additionalOptions>
            <additionalOption>--add-stylesheet "${project.basedir}/src/main/javadoc/customization.css"</additionalOption>
          </additionalOptions>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
